--- a/libraries/stdlib/jvm/build.gradle
+++ b/libraries/stdlib/jvm/build.gradle
@@ -77,6 +77,8 @@ jar {
     manifestAttributes(manifest, project, 'Main', true)
     from("${rootDir}/dist/builtins")
     from sourceSets.experimental.output
+    from sourceSets.coroutines.output
+    from sourceSets.unsigned.output
     // TODO: enable as soon as this doesn't cause D8/DX to crash
     // from sourceSets.java9.output
 }
@@ -89,6 +91,8 @@ task distJar(type: Jar) {
     from sourceSets.annotations.output
     from sourceSets.main.output
     from sourceSets.experimental.output
+    from sourceSets.coroutines.output
+    from sourceSets.unsigned.output
     // TODO: enable as soon as this doesn't cause D8/DX to crash
     // from sourceSets.java9.output
 }
@@ -98,7 +102,6 @@ task coroutinesJar(type: Jar) {
     classifier = 'coroutines'
     manifestAttributes(manifest, project, 'Main', true)
     project.configure(manifest) { attributes 'Kotlin-Version': '1.3' }
-    from sourceSets.coroutines.output
 }
 
 task unsignedJar(type: Jar) {
@@ -106,7 +109,6 @@ task unsignedJar(type: Jar) {
     classifier = 'unsigned'
     manifestAttributes(manifest, project, 'Main', true)
     project.configure(manifest) { attributes 'Kotlin-Version': '1.3' }
-    from sourceSets.unsigned.output
 }
 
 sourcesJar {
@@ -174,7 +176,8 @@ compileKotlin {
                 "-Xnormalize-constructor-calls=enable",
                 "-module-name", "kotlin-stdlib",
                 "-Xuse-experimental=kotlin.Experimental",
-                "-XXLanguage:-ReleaseCoroutines"
+                "-XXLanguage:-ReleaseCoroutines",
+                "-XXLanguage:+InlineClasses"
         ]
     }
 }
